# msgraph-su

./: README.md  pyproject.toml
py_msgraph/: __init__.py  msgraph.py
