[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-msgraph"
version = "0.0.3"
description = "library to use MS graph API"
readme = "README.md"
authors = [{ name = "Sungwon Um", email = "shineum@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["microsoft", "graph api"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/shineum/py-msgraph"